refactor : sonarcloud 이슈 해결